backend.yaml
# backend service

apiVersion: v1
kind: Service
metadata:
  labels:
    app: tcr-app-server
  name: tcr-app-server-svc
  namespace: tcr-ns

spec:
  ports:
    - name: tcr-app-server
      port: 9000
      targetPort: 9000
      #nodePort: 31001
      protocol : TCP

  selector:
    app: tcr-app-server
  type: ClusterIP
